--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chat",
   "version": "0.1.0",
-  "description": "a litter",
-  "main": "jquery-2.1.4.min.js",
+  "description": "A sample Node.js app using socket.io",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
